--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,11 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: KubernetesManifest@1
+- task: Kubernetes@1
   inputs:
-    action: 'deploy'
-    connectionType: 'kubernetesServiceConnection'
-    kubernetesServiceConnection: 'K8s'
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'K8s'
+    command: 'apply'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
+    azureSubscriptionEndpointForSecrets: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
