--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,17 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: KubectlInstaller@0
+  inputs:
+    kubectlVersion: 'latest'
+
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'Azure subscription 1(977812bc-0cfb-4c57-8912-a7804ccf8fba)'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'az aks get-credentials --resource-group myResourceGroup --name myAKSCluster'
+
 - task: Bash@3
   inputs:
     targetType: 'inline'
